--- a/.npmignore
+++ b/.npmignore
@@ -1,2 +1,15 @@
 .DS_Store
 *.tsbuildinfo
+.taskmaster
+.cursor
+.vscode
+node_modules
+.gitignore
+.npmignore
+.git
+.github
+.n8n
+.n8nignore
+.n8nrc
+PRD.md
+
