--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-bookoly",
   "version": "0.1.0",
-  "description": "",
+  "description": "n8n community node for Bookoly API integration",
   "keywords": [
     "n8n-community-node-package"
   ],
   "license": "MIT",
   "homepage": "",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Alexander Baumtrog",
+    "email": "alexander.baumtrog@bookoly.de"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/bookoly/n8n-node.git"
   },
   "engines": {
     "node": ">=20.15"
